default/plex/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  labels:
    app: plex
spec:
  selector:
    matchLabels:
      app: plex
  replicas: 1
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
        - name: plex
          image: plexinc/pms-docker:latest
          ports:
            - containerPort: 32400
              name: webui
          volumeMounts:
            - name: plex-config
              mountPath: /config:shared
            - name: nfs-plex-data
              mountPath: /data
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1536Mi
        - name: git-sync-hama-bundle
          image: k8s.gcr.io/git-sync:v3.1.6
          securityContext:
            runAsGroup: 0
            runAsUser: 0
          volumeMounts:
            - name: plex-config
              mountPath: /tmp/plex-config:shared
          resources:
            requests:
              cpu: 250m
              memory: 64Mi
            limits:
              cpu: 1000m
              memory: 128Mi
        - name: git-sync-ass
          image: k8s.gcr.io/git-sync:v3.1.6
          securityContext:
            runAsGroup: 0
            runAsUser: 0
          volumeMounts:
            - name: plex-config
              mountPath: /tmp/plex-config:shared
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
      volumes:
        - name: nfs-plex-data
          persistentVolumeClaim:
            claimName: nfs-pvc
        - name: plex-config
          persistentVolumeClaim:
            claimName: plex-config
