default/plex/service.yml
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  type: NodePort
  ports:
    - name: webui
      targetPort: webui
      port: 32400
      protocol: TCP
      nodePort: 32400
  selector:
    app: plex
