default/plex/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: plex-ingress
  labels:
    app.kubernetes.io/name: plex-ingress
    app.kubernetes.io/part-of: plex
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
    - host: "plex.tristan.moe"
      http:
        paths:
          - backend:
              serviceName: plex
              servicePort: 32400
  tls:
    - hosts:
        - "plex.tristan.moe"
      secretName: letsencrypt-cert-plex.tristan.moe
